tests/derivation/core/norec t-pi--.. noext 003/expected
1/2: Building RunDerivedGen (RunDerivedGen.idr)
2/2: Building DerivedGen (DerivedGen.idr)
Error: While processing right hand side of checkedGen. Error during reflection: Usupported applications to a non-concrete type `a`

DerivedGen:1
 13 | Show (X b1 b2) where
 14 |   show (MkX b1 b2 _) = "MkX \{show b1} \{show b2} Refl"
 15 | 
 16 | checkedGen : Fuel -> (b1 : Bool) -> (b2 : Bool) -> Gen MaybeEmpty (X b1 b2)
 17 | checkedGen = deriveGen
                   ^^^^^^^^^

